Revision history for Perl extension Net::SSH2.

0.41  2012-04-18 22:12:07
        - fix missing -I for include directory with inc= option to Makefile.PL
          (RT#73659)

0.40  2011-10-23 18:41:17
        - add ssh-agent support (krimdomu)

0.39  2011-07-17 18:24:30
        - fix double free in auth_password (RT#69444)

0.38  2011-06-02 14:52:30
        - add version check for block_directions

0.37  2011-06-02 14:34:26
        - update ppport.h
        - use correct libssh2 version check for exit_signal support

0.36  2011-05-27 21:28:00
        - allow setting lib and inc paths on the command line (salva)

0.35  2011-05-10 17:43:17
        - fix for segfault due to auth_list() (RT#68060)

0.34  2011-05-07 08:34:35
        - fix trace option to ->new
        - handle partial writes for scp_put
        - add $chan->exit_signal (patch from tommy.lindgren@gmail.com)
        - add $ssh->block_directions
        - add new constants (socket, trace and ERROR_EAGAIN)

0.33  2010-07-13 07:59:22
        - change trace option to use bitmask, so it becomes trace => -1, also
          added ->trace method

0.32  2010-07-13 07:47:12
        - add trace => 1 option to ->new (RT#59292)

0.31  2010-06-13 09:35:38
        - remove eval $VERSION, was confusing some testers

0.30  2010-05-20 10:43:14
        - rename symbol libssh2_error to xs_libssh2_error to avoid symbol
          clashes (sisyphus)

0.29  2010-04-14 20:25:37
        - fix splice warning when connecting with a socket handle (RT#56592)

0.28  2009-10-24 07:27:42
        - added patch to find 64bit libs from H.Merijn Brand
        - fix breakage on versions < 1.0 related to the pty functions

0.27  2009-09-10 06:54:58
        - reverting a bad release

0.25  2009-09-07 01:07:58
        - fix an unitialized warning

0.24  2009-08-20 19:55:28
        - include patch for $chan->pty_size($w, $h) from Rubio Vaughan

0.23  2009-08-18 04:00:42
        - Fix timeout option (forgot key)

0.22  2009-08-15 11:10:03